<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.devanshi.firebasewithlogin.fragement.HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/hospital"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:src="@drawable/hospi_icon"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/doctor"
            android:layout_marginRight="10dp"
            android:adjustViewBounds="true"
            android:src="@drawable/doctor"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/bg_register"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="0.5"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/bg_register"
            android:textStyle="bold"
            android:text="@string/doctor"
            android:layout_weight="0.5"
            android:gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/laboratory"
            android:src="@drawable/laboratory"
            android:adjustViewBounds="true"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:id="@+id/pharmacy"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/pharmacy"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/laboratory"
            android:textColor="@color/bg_register"
            android:gravity="center"
            android:layout_weight="0.5"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/bg_register"
            android:textStyle="bold"
            android:text="@string/pharmacy"
            android:layout_weight="0.5"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>
